modifique img de css

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -7,7 +7,7 @@ html {
   /* informe especial */
   
   #informeespecial {
-    background-image: url("../imgs/hhh.jpg");
+    background-image: url("..imgs/hhh.jpg");
     margin-top: 300px;
     height: 400px;
     width: 100%;
